// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creation of the Divider control (inherit) 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  dividerType=" "
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Divider"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="inherit"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-divider"
    style={Object {}}
    width="4px"
  >
     
  </styled.div>
</Wrapper>
`;

exports[`Creation of the Divider control (large) 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  dividerType=" "
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Divider"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="large"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-divider"
    style={Object {}}
    width="6px"
  >
     
  </styled.div>
</Wrapper>
`;

exports[`Creation of the Divider control (medium) 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  dividerType=" "
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Divider"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="medium"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-divider"
    style={Object {}}
    width="4px"
  >
     
  </styled.div>
</Wrapper>
`;

exports[`Creation of the Divider control (normal) 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  dividerType=" "
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Divider"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-divider"
    style={Object {}}
    width="4px"
  >
     
  </styled.div>
</Wrapper>
`;

exports[`Creation of the Divider control (small) 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  dividerType=" "
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Divider"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="small"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-divider"
    style={Object {}}
    width="3px"
  >
     
  </styled.div>
</Wrapper>
`;

exports[`Creation of the Divider control (xlarge) 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  dividerType=" "
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Divider"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="xlarge"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-divider"
    style={Object {}}
    width="8px"
  >
     
  </styled.div>
</Wrapper>
`;

exports[`Creation of the Divider control (xsmall) 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  dividerType=" "
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Divider"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="xsmall"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-divider"
    style={Object {}}
    width="2px"
  >
     
  </styled.div>
</Wrapper>
`;

exports[`Creation of the Divider control (xxlarge) 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  dividerType=" "
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Divider"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="xxlarge"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-divider"
    style={Object {}}
    width="12px"
  >
     
  </styled.div>
</Wrapper>
`;

exports[`Creation of the Divider control (xxsmall) 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  dividerType=" "
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Divider"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="xxsmall"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-divider"
    style={Object {}}
    width="1.5px"
  >
     
  </styled.div>
</Wrapper>
`;

exports[`Test retrieval of Divider props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "dividerType": " ",
  "err": null,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "id": "",
  "left": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "obj": "Divider",
  "padding": "",
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": "",
  "top": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
